syntax = "proto3";

package ingest;

option go_package = "ingestpb";

import "github.com/grafana/mimir/pkg/mimirpb/mimir.proto";

message Segment {
  repeated Piece pieces = 1;
  int32 partition_id = 2;
}

message Piece {
  cortexpb.WriteRequest write_requests = 1;
  string tenant_id = 2;
}

message WriteResponse {
}

message WriteRequest {
    Piece piece = 1;
    int32 partition_id = 2;
}

service WriteAgent {
  rpc Write(WriteRequest) returns (WriteResponse) {}
}
